# gws-cli

./: BUILD.bazel  Cargo.toml  README.md  RELEASE.md
.github/workflows/: release.yml
dev-docs/: GwzGaps.md  GwzMemberGitSpec.md  GwzProgressSpec.md  GwzRcSpec.md  GwzStashPlan.md  GwzStashSpec.md
docs/: CLI.md  RootWorkspace.md
docs/commands/: forall.md  push.md
src/: add_after.rs  add_long.rs  append_branch_summary.rs  branch_status_json.rs  cli_after.rs  cli_long.rs  clirequest.rs  clone_after.rs  clone_long.rs  forall.rs  git_status_json.rs  git_transfer_progress_json.rs  globalargs.rs  impl_from_syncarg_for_gwz_core_syncbehavior.rs  init_after.rs  init_long.rs  lsargs.rs  main.rs  materialize_after.rs  materialize_long.rs  nameargs.rs  parse_non_negative_i64.rs  parse_positive_i64.rs  progress_detail.rs  pull_after.rs  pull_long.rs  push_after.rs  push_long.rs  repo_after.rs  repo_create_after.rs  repo_create_long.rs  repo_long.rs  response_meta_json.rs  snapshot_after.rs  snapshot_long.rs  stage_after.rs  stage_long.rs  status_after.rs  status_long.rs  statusargs.rs  (+3 more)
src/tests/: g00.rs  g01.rs  g02.rs  g03.rs  g04.rs  g05.rs  g06.rs  g07.rs  mod.rs
tests/: local_workflows.rs  publish_workflow.rs  rename.rs
